# ffmpeg-stream-audio

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yaml  release.yml  test.yml
src/: cli.rs  command.rs  config.rs  configuration.rs  download.rs  error.rs  main.rs  ui.rs
src/ui/: handlers.rs  webpage.rs
systemd/: ffmpeg-stream-audio.service
