[package]
name = "ffmpeg-stream-audio"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8" }
chrono = { version = "0.4"}
clap = { version = "4", features = ["derive"] }
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "process", "macros", "signal"] }
toml = { version = "0.9", features = ["parse"] }
typetag = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
strum = { version = "0.27", features = ["derive"] }
reqwest = { version = "0.13",  features = ["json"]}
zip = { version = "7", default-features = false, features = ["deflate-flate2","deflate-flate2-zlib-rs"]}

[profile.release]
lto = true
codegen-units = 1
