[package]
name = "ffmpeg-stream-audio"
version = "0.4.3"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
chrono = { version = "0.4"}
clap = { version = "4", features = ["derive"] }
maud = { version = "0.27", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "process", "macros", "signal"] }
toml = { version = "1", features = ["parse"] }
typetag = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
strum = { version = "0.28", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
